--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.3"
+    "mongoose": "^8.2.3",
+    "razorpay": "^2.9.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
